kubernetes/nginx-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: godel-nginx-cluster-ip
  name: godel-nginx-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: godel-nginx
