kubernetes/nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: godel-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
